🐛 fix VSCode render the wrong background

--- a/VSCode/customCSSAndJS/custom.css
+++ b/VSCode/customCSSAndJS/custom.css
@@ -263,3 +263,45 @@ div.monaco-progress-container.quick-input-progress.done {
   .pane.expanded.vertical {
   padding-top: 8px !important;
 }
+
+.scm-view .scm-input .scm-editor .scm-editor-toolbar {
+  display: none;
+  cursor: none;
+}
+
+#workbench\.parts\.editor
+  > div.content
+  > div
+  > div
+  > div
+  > div
+  > div.monaco-scrollable-element.mac
+  > div.split-view-container
+  > div
+  > div
+  > div.editor-container
+  > div
+  > div
+  > div.overflow-guard
+  > div.monaco-scrollable-element.editor-scrollable.vs-dark.mac {
+  background-color: var(--vscode-editor-background);
+}
+
+#workbench\.parts\.editor
+  > div.content
+  > div
+  > div
+  > div
+  > div
+  > div.monaco-scrollable-element.mac
+  > div.split-view-container
+  > div
+  > div
+  > div.editor-container
+  > div
+  > div
+  > div.overflow-guard
+  > div.monaco-scrollable-element.editor-scrollable.vs-dark.mac
+  > div.lines-content.monaco-editor-background {
+  background-color: unset;
+}
